0.9
---

### Issue Fixes
* [#229](https://github.com/upfrontsystems/izinto-angular/issues/229) Add owner to data source
* [#230](https://github.com/upfrontsystems/izinto-angular/issues/230) Add request config to data source

0.8
---

### Issue Fixes
* [#226](https://github.com/upfrontsystems/izinto-angular/issues/226) Refactor user access to collections and dashboards
* [#157](https://github.com/upfrontsystems/izinto-angular/issues/157) Add variables to collections

0.7
---

### Issue Fixes
* [#171](https://github.com/upfrontsystems/izinto-angular/issues/171) Handle query on database url
* [#173](https://github.com/upfrontsystems/izinto-angular/issues/173) Add Query model and view
* [#179](https://github.com/upfrontsystems/izinto-angular/issues/179) Link queries per dashboard
* [#197](https://github.com/upfrontsystems/izinto-angular/issues/197) Add optional date selector flag to dashboard
* [#199](https://github.com/upfrontsystems/izinto-angular/issues/199) Add image to collection and dashboard

0.6
---

### Issue Fixes
* [#150](https://github.com/upfrontsystems/izinto-angular/issues/150) Enable gzip compression
* [#160](https://github.com/upfrontsystems/izinto-angular/issues/160) Refactor Dashboard to render HTML content

0.5
---

- Initial version.

### Issue Fixes
* [#13](https://github.com/upfrontsystems/izinto-angular/issues/13) add variable model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add collection model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add dashboards in collections reorder
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add pasting dashboards and collections
* [#17](https://github.com/upfrontsystems/izinto-angular/issues/17) add single stat
* [#19](https://github.com/upfrontsystems/izinto-angular/issues/19) add reorder to chart
* [#20](https://github.com/upfrontsystems/izinto-angular/issues/20) add data source