@@ -15,6 +15,7 @@ class Branding(Base):
     hostname = Column(Unicode(length=500), unique=True)
     favicon = Column(Unicode(length=500))
     logo = Column(Unicode(length=500))
+    logo_mobile = Column(Unicode(length=500))
     banner = Column(Unicode(length=500))
     user_id = Column(VARCHAR(length=32), ForeignKey('user.id', ondelete="cascade"), nullable=False)
 
@@ -23,6 +24,7 @@ class Branding(Base):
                 'hostname': self.hostname,
                 'favicon': self.favicon,
                 'logo': self.logo,
+                'logo_mobile': self.logo_mobile,
                 'banner': self.banner}
 
     def __repr__(self):
